# bevy-visual-e2e-testing-ci-example

./: Cargo.toml  README.md  log4rs.yaml
.github/workflows/: test.yml
src/: font_manager.rs  log_setup.rs  main.rs  test_automation.rs
src/test_system/: bevy_systems.rs  channel.rs  mod.rs  server.rs
src/test_system/graphql/: mod.rs  mutations.rs  queries.rs  schema.rs  types.rs
src/test_system/mcp/: dispatch.rs  dispatch_shared.rs  dispatch_system.rs  dispatch_ui.rs  handler.rs  mod.rs  protocol.rs  tools.rs
tests/: cucumber.rs  test_utilities.rs
tests/features/: ball_generation.feature  button_click.feature
workflows/: test.yml
