[package]
name = "simple-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.17.2"
log = "0.4"
log4rs = "1.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.8"
crossbeam-channel = "0.5"
backoff = "0.4"

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1.42", features = ["full", "test-util"] }
tungstenite = "0.26"
serde_json = "1.0"

[[test]]
name = "cucumber"
harness = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
